fixed validation messages not showing

--- a/bookstore/war/Bookstore.css
+++ b/bookstore/war/Bookstore.css
@@ -50,9 +50,13 @@ div#loginBody, #registrationBody {
 
 #validationPanel {
 	padding:10px;
-	display : none;
+	background-color : red;
 }
 
+#validationPanel.hidden {
+  	display : none;
+  }
+  
 #loginPanel {
 	padding:5px;
 }
